--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "netlify-cms-media-library-uploadcare": "^0.5.2",
     "node-sass": "^4.14.0",
     "prop-types": "^15.6.0",
+    "ramda": "^0.27.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
