--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
+    "react-responsive-carousel": "^3.2.12",
+    "styled-components": "^5.2.1",
     "uuid": "^7.0.0"
   },
   "keywords": [
