--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "main": "n/a",
   "scripts": {
     "clean": "gatsby clean",
+    "serve": "gatsby serve",
     "start": "npm run develop",
     "build": "npm run clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
